<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnPrimary"
    android:orientation="vertical"
    tools:context=".RegisterProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/product_register_title"
                android:textColor="?colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="28sp"
                tools:ignore="MissingConstraints" />
            <ImageView
                android:id="@+id/register_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_flecha_izquierda"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/product_register_description"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/register_description"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="?colorSecondary"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="2dp"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="text"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/shape_input"
                    />
                <TextView
                    android:id="@+id/register_description_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/red_error"
                    android:visibility="invisible"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/product_register_brand"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/register_brand"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="?colorSecondary"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="2dp"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="text"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/shape_input"
                    />
                <TextView
                    android:id="@+id/register_brand_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/red_error"
                    android:visibility="invisible"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/product_register_purchase_price"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/register_purchase_price"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="?colorSecondary"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="2dp"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="numberDecimal"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/shape_input"
                    />
                <TextView
                    android:id="@+id/register_purchase_price_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/red_error"
                    android:visibility="invisible"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/product_register_sale_price"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/register_sale_price"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="?colorSecondary"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="2dp"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="numberDecimal"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/shape_input"
                    />
                <TextView
                    android:id="@+id/register_sale_price_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/red_error"
                    android:visibility="invisible"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/product_register_stock"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <EditText
                    android:id="@+id/register_stock"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:textColor="?colorSecondary"
                    android:paddingHorizontal="7dp"
                    android:paddingVertical="2dp"
                    android:textSize="15sp"
                    android:lines="1"
                    android:inputType="number"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/shape_input"
                    />
                <TextView
                    android:id="@+id/register_stock_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/red_error"
                    android:visibility="invisible"
                    android:textSize="14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/product_register_image"
                    android:textColor="?colorSecondary"
                    android:textSize="18sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:cardCornerRadius="15dp">
                        <ImageView
                            android:id="@+id/register_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_gallery"
                            android:scaleType="centerCrop"
                            android:layout_margin="10dp"/>

                    </androidx.cardview.widget.CardView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/product_register_button_open_gallery"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            app:backgroundTint="@null"
                            android:background="@drawable/shape_button"
                            android:text="@string/product_register_open_gallery"
                            android:textSize="15sp"
                            android:textAllCaps="false"
                            android:letterSpacing="0"
                            android:fontFamily="@font/inter_bold"
                            />
                        <TextView
                            android:id="@+id/register_image_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_medium"
                            android:textColor="@color/red_error"
                            android:textSize="14sp"/>
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <Button
                    android:id="@+id/product_register_button_save"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    app:backgroundTint="@null"
                    android:background="@drawable/shape_button"
                    android:text="@string/register_save"
                    android:textSize="17sp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/inter_bold"
                    android:letterSpacing="0"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/product_register_button_cancel"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    app:backgroundTint="@null"
                    android:background="@drawable/shape_button_outline"
                    android:text="@string/register_cancel"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    android:textColor="?colorPrimary"
                    android:fontFamily="@font/inter_bold"
                    android:lineSpacingExtra="1dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:letterSpacing="0"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>